--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-toast": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@types/js-yaml": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "js-yaml": "^4.1.0",
+    "jsondiffpatch": "^0.7.3",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-intl": "^4.3.6",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
   },
