--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "js-yaml": "^4.1.0",
     "jsondiffpatch": "^0.7.3",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-intl": "^4.3.6",
