--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-toast": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/crypto-js": "^4.2.2",
     "@types/js-yaml": "^4.0.9",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "js-yaml": "^4.1.0",
     "jsondiffpatch": "^0.7.3",
     "jszip": "^3.10.1",
