--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "fast-xml-parser": "^5.3.0",
     "js-yaml": "^4.1.0",
     "jsondiffpatch": "^0.7.3",
     "jszip": "^3.10.1",
