--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@types/crypto-js": "^4.2.2",
@@ -33,7 +34,7 @@
     "jsondiffpatch": "^0.7.3",
     "jszip": "^3.10.1",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "15.5.9",
     "next-intl": "^4.3.6",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
